--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+DontSee.html filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.js filter=lfs diff=lfs merge=lfs -text
