--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,6 @@ DontSee.html filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *js filter=lfs diff=lfs merge=lfs -text
 *css filter=lfs diff=lfs merge=lfs -text
+*html filter=lfs diff=lfs merge=lfs -text
 *.js filter=lfs diff=lfs merge=lfs -text
 *.css filter=lfs diff=lfs merge=lfs -text
